<resources>
    <string name="app_name">Tenlac</string>
    <string name="typea">Type a message</string>


    <string name="emailHint">Email</string>
    <string name="PasswordHint">Password</string>
    <string name="butonLogin">Log In</string>
    <string name="LinkTexto">No tienes una cuenta?</string>
    <string name="Regístrate">Regístrate</string>
    <string name="Wait">Espere</string>

    <string name="auth_failed">Autenticación fallida</string>
    <string name="auth_succes">Autenticación completada</string>
    <string name="search_title">search</string>
    <string name="search_hint">Buscar...</string>
    <string name="TipoDeClase">Clase</string>
    <string name="Precio">Precio</string>
    <string name="listo">Listo</string>
    <string name="Location">Ubicación</string>
    <string name="Descripcion">Descripción</string>
    <string name="Username">Username</string>
    <string name="TipoClase">Clase</string>
    <string name="FullNameHint">Nombre</string>
    <string name="NickName">NickName</string>
    <string name="butonRegister">Regístrate</string>
    <string name="Ubicación">Ubicación</string>
    <string name="dondebuscar">¿Donde quieres buscar ?</string>
    <string name="cuantopagar">¿Cuánto quieres pagar?</string>


    <string name="preferences_clase">preferences_clase</string>
    <string name="preferences_ubicacion">preferences_ubicacion</string>
    <string name="preferences_precio">preferences_precio</string>
    <string name="elasticSearch">elasticsearch</string>
    <string name="field_password">password</string>
    <string name="empezar">Empezar</string>
    <string name="quiz">Quiz</string>
    <string name="maluma">Maluma</string>
    <string name="Nikimi">Nicki Minaj</string>
    <string name="puntos">Puntos:0</string>
    <string name="puntosyaconseguidos">Puntosyaconseguidos</string>
    <string name="puntacos">puntos</string>
    <string name="obtenerpuntos">Obtener puntos</string>
    <string name="Finalizar">Finalizar</string>
    <string name="Salir">Salir</string>
    <string name="NewGame">Empezar</string>
    <string name="Tuspunton">Tus puntos son :</string>
    <string name="GameOver">¡Game Over!</string>
    <string name="sumarpuntos">Sumar puntos</string>
    <string name="home">Home</string>
    <string name="disfrutardelospremios">Ingresa para disfrutar de los premios</string>
    <string name="nocuenta">¡No tienes cuenta!</string>
    <string name="haobtenido">Has obetenido: ... puntos</string>
    <string name="tuspuntos">0 points</string>
    <string name="tuPorcentaje">Tu porcentaje: 0%</string>
    <string name="flappycat">Flappy Cat</string>
    <string name="canjearpuntos">Canjear puntos</string>
    <string name="canjearporbitcoin">Canjear por Bitcoin</string>
    <string name="paypalcash">Paypal Cash</string>
    <string name="cincocincocerospuntos">500,000 Puntos</string>
    <string name="canjearporpaypal">Canjear por Paypal</string>
    <string name="milpuntos">1000 Puntos</string>
    <string name="bitcoin">Bitcoin</string>
    <string name="loremipsum">Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen. No sólo sobrevivió 500 años, sino que tambien ingresó como texto de relleno en documentos electrónicos, quedando esencialmente igual al original. Fue popularizado en los 60s con la creación de las hojas "Letraset", las cuales\n contenian pasajes de Lorem Ipsum, y más recientemente con \nsoftware de autoedición, como por ejemplo Aldus PageMaker, el cual incluye versiones de Lorem Ipsum.</string>
    <string name="canjear">Canjear</string>
    <string name="numerodewallet">Numero de wallet</string>
    <string name="sinconeccion">Sin conección a Internet</string>
    <string name="watchvideo">+ 5 puntos</string>
    <string name="continuar">Continuar</string>
    <string name="reportProblemsugerencia">Reportar problema \n o \n sugerencia</string>
    <string name="sugerencia">Sugerencia...</string>
    <string name="Timeover">Time Over</string>
    <string name="newGame">New Game</string>
    <string name="watchVideo">Watch Video</string>
    <string name="freelive">Free life</string>
    <string name="settings">Settings</string>
    <string name="sinvidas">Sin Vidas</string>
    <string name="salvame">Save me!</string>
    <string name="felicidades">Felicidades!</string>
    <string name="save">Save</string>
    <string name="deporte">Deporte</string>
    <string name="sixtysecondschallenge">60 Seconds Challenge</string>
    <string name="science">Science</string>
    <string name="geography">Geography</string>
    <string name="art">Art</string>
    <string name="cine">Cine</string>
    <string name="history">History</string>
    <string name="Categorías">Categorías</string>
    <string name="noOlvides">¡Guarda tus puntos!</string>
    <string name="noOlvidessss">No olvides guardar tus puntos</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="sonido">Sound</string>
    <string name="music">Music</string>
    <string name="ceroBtC">Pool: 0 Btc</string>
    <string name="geraelmandamas">Geraelmandamas</string>
    <string name="reportProblema">Report problem</string>
    <string name="continu">Continue</string>
    <string name="ConfirmPasswordHint">Confirm password</string>
    <string name="yatinesCuenta">Ya tienes cuenta?</string>
    <string name="ingresa">Ingresa</string>
    <string name="uno">1</string>
    <string name="dos">2</string>
    <string name="tres">3</string>
    <string name="cuatro">4</string>
    <string name="cinco">5</string>
    <string name="seis">6</string>
    <string name="cero">0</string>
    <string name="textTituloAbajo">¿La carta de abajo será mayor o menor?</string>
    <string name="arriba">Mayor</string>
    <string name="menor">Menor</string>
    <string name="mensaje">gera </string>
    <string name="enviadopor">gera</string>
</resources>
